--- a/styles/global.css
+++ b/styles/global.css
@@ -3,11 +3,12 @@ body {
   font-family: -apple-system, BlinkMacSystemFont,     Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   line-height: 1.6;
   font-size: 18px;
-  background-color: #fff;
+  /* background-color: #fff; */
   color: #191919;
   margin: 0; 
 }
 
+html.dark,
 body.dark {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   line-height: 1.6;
