--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -62,3 +62,9 @@
   align-items: center;
   padding: 0 5px;
 }
+
+.nightMode {
+  background-color: transparent;
+	border: none;
+	cursor: pointer;
+}
